"fix styles on mobiles and fix some bugs"

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,11 +72,11 @@ button {
   }
 
   .hero-title {
-    @apply text-center font-semibold text-3xl text-gray-50 opacity-0 max-md:mb-10
+    @apply text-center font-semibold text-3xl text-gray-50 opacity-0 
   }
 
   .hero-subtitle {
-    @apply text-center font-bold text-5xl text-gray-50 opacity-0 max-md:mb-10
+    @apply text-center font-bold text-5xl text-gray-50 opacity-0 
   }
 
   .hiw-title {
